--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
     repositories {
         mavenCentral()
-        maven { url 'https://raw.github.com/Archinamon/GradleAspectJ-Android/master' }
+        maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.archinamon:AspectJ-gradle:1.0.17'
+        classpath 'com.github.Archinamon:GradleAspectJ-Android:3.0.3'
     }
 }
 
@@ -12,13 +12,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.archinamon.aspectj'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "com.archinamon.example"
-        minSdkVersion 15
-        targetSdkVersion 22
+        minSdkVersion 19
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
