--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,4 @@
-buildscript {
-    repositories {
-        mavenCentral()
-        maven { url "https://jitpack.io" }
-    }
-    dependencies {
-        classpath 'com.github.Archinamon:GradleAspectJ-Android:3.0.3'
-    }
-}
-
 apply plugin: 'com.android.application'
-apply plugin: 'com.archinamon.aspectj'
 
 android {
     compileSdkVersion 25
@@ -32,5 +21,21 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:appcompat-v7:25.0.0'
 }
+
+///// GradleAspectJ-Android /////
+
+buildscript {
+    repositories {
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+    }
+    dependencies {
+        classpath 'com.github.Archinamon:GradleAspectJ-Android:3.0.3'
+    }
+}
+
+apply plugin: 'com.archinamon.aspectj'
+
+/////////////////////////////////
